src/objects/CICD_Build_Details__c.object
<CustomObject>
    <description>This object stores all build results from CodeShip</description>
    <fields>
        <fullName>Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Build Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Build_Id__c</fullName>
        <externalId>true</externalId>
        <label>Build Id</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Build URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Commit_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Committer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Committer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deploy_Errors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deploy Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Environment Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_IP_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inbound IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module_Enhancement_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link deployments to the module enhancement</description>
        <label>Module Enhancement Request</label>
        <referenceTo>Application_Request__c</referenceTo>
        <relationshipLabel>CICD Build Details</relationshipLabel>
        <relationshipName>CICD_Build_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Commit_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Short Commit Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commit_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>commit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CICD Build Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Environment_Name__c</columns>
        <columns>Build_Id__c</columns>
        <columns>Branch__c</columns>
        <columns>Release_Number__c</columns>
        <columns>Build_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Inbound_IP_Address__c</columns>
        <columns>Message__c</columns>
        <columns>Build_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Number__c</field>
            <operation>equals</operation>
            <value>Release_19.12.1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLD-{0000}</displayFormat>
        <label>CICD Build Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CICD Build Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>